# ice

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Draft.md  README.md  cliff.toml  flake.nix  ice.json  justfile  scoop.json  scoreboard.txt
.github/workflows/: build.yml  release.yml
archive/ice-core/src/: main.rs  modrinth.rs  utils.rs
archive/ice-core/src/core/server/: backup.rs  mod.rs
docs/: Draft.md  Ice.toml.md  cli.md  plugin.md
ice-cli/: Cargo.toml
ice-cli/src/: config.rs  lib.rs  main.rs
ice-cli/src/cli/: modrinth.rs
ice-cli/src/core/: command.rs  loader.rs  mod.rs  modrinth.rs  server.rs
ice-cli/src/modrinth/: mod.rs
ice-core/: .gitignore  Cargo.toml  Draft.md  README.md
ice-core/src/: commands.rs  config.rs  lib.rs  modrinth.rs
ice-core/src/core/: mod.rs
ice-core/src/server/services/: servers.rs
notes/: core.md  modrinth.md  rhai_plugin.md
plugins/here/: Cargo.toml
plugins/here/src/: lib.rs
src/: config.rs  error.rs  lib.rs  log.rs  modrinth.rs
src/api/: mod.rs  modrinth.rs  mojang.rs
src/config/: mod.rs  mod_config.rs
src/core/: mod.rs  server.rs
src/loader/: mod.rs
src/utils/: fs.rs  mod.rs  modrinth.rs  regex.rs  time.rs
