[package]
name = "ice"
version = "0.1.0-alpha.38"
edition = "2021"

[dependencies]
ice-api-tool.workspace = true
ice-server.workspace = true
ice-core = { workspace = true, features = ["clap"] }
ice-util.workspace = true
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }
# log = "0.4"
env_logger = "0.11.8"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking", "json", "stream"] }
serde_json = "1.0.140"
chrono = "0.4.41"
sha = "1.0.3"
color-print = "0.3.7"
toml_edit = { version = "0.22.22", features = ["serde"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
indicatif = "0.17.11"
tracing-indicatif = "0.3.9"
anyhow = "1.0.98"
# indicatif-log-bridge = "0.2.3"


[workspace]
members = ["packages/*"]

[workspace.dependencies]
ice-api-tool = {path = "packages/ice-api-tool"}
ice-server = { path = "packages/ice-server" }
ice-core = { path = "packages/ice-core" }
ice-util = { path = "packages/ice-util" }
