[package]
name = "ice-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ice-core.workspace = true
toml = "0.8.6"
serde = { version = "1.0.190", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4"
env_logger = "0.10.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
curl = "0.4.44"
