[package]
name = "ice-cli"
version = "0.1.0-alpha.3"
edition = "2021"

[dependencies]
ice-core.workspace = true
toml = "0.8.6"
serde = { version = "1.0.190", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4"
env_logger = "0.10.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
curl = "0.4.44"
# indicatif = "0.17.8"
# indicatif-log-bridge = "0.2.2"
tokio = "1.38.0"
tracing = "0.1.40"
tracing-indicatif = "0.3.6"
tracing-subscriber = "0.3.18"
