[package]
name = "ice-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = "0.4.31"
curl = "0.4.44"
derivative = "2.2.0"
dirs = "5.0.1"
log = "0.4"
env_logger = "0.10.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.6"
